# THEORY_DS

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
quiz_data/: theory_ds_1.1_1.json  theory_ds_1.1_2.1.json  theory_ds_1.1_2.2.json  theory_ds_1.1_2.3.json  theory_ds_1.1_3.1.json  theory_ds_1.1_3.2.json  theory_ds_1.1_4.json  theory_ds_1.1_5.json  theory_ds_1.1_6.1.json  theory_ds_1.1_6.2.json  theory_ds_1.1_7.json  theory_ds_1.1_9.json
quiz_data_middle/: theory_ds_1.1_1.json  theory_ds_1.1_2.1.json  theory_ds_1.1_2.2.json  theory_ds_1.1_3.1.json  theory_ds_1.1_5.json  theory_ds_1.1_6.1.json  theory_ds_1.1_6.2.json  theory_ds_1.1_7.json  theory_ds_1.1_8.json
